修改AI部分的编译错误

--- a/conf/settings.properties
+++ b/conf/settings.properties
@@ -1,4 +1,6 @@
 #Shimeji-ee Configuration Options
-#Mon Jul 08 21:48:50 WST 2013
+#Tue Oct 28 16:16:56 CST 2025
+Language=zh-CN
+MenuDPI=96
 InteractiveWindows=Chat/Notepad/Friends/Windows Live Messenger
 ActiveShimeji=Shimeji
