新增 AI 设置功能，支持从配置文件读取 API Key 和启用状态，优化 DeepseekChatService 逻辑

--- a/conf/settings.properties
+++ b/conf/settings.properties
@@ -1,6 +1,18 @@
 #Shimeji-ee Configuration Options
-#Tue Oct 28 16:16:56 CST 2025
+#Mon Nov 03 22:36:33 CST 2025
+Filter=nearest
 Language=zh-CN
+Opacity=1.0
 MenuDPI=96
+ai.personality=Friendly
+ai.enabled=true
+ai.endpoint=https\://api.example.com
 InteractiveWindows=Chat/Notepad/Friends/Windows Live Messenger
+Scaling=1.0
+AlwaysShowShimejiChooser=false
+Environment=generic
+ai.log_conversations=true
 ActiveShimeji=Shimeji
+ai.api_key=
+AlwaysShowInformationScreen=false
+InteractiveWindowsBlacklist=
