--- a/conf/theme.properties
+++ b/conf/theme.properties
@@ -1,11 +1,12 @@
-nimrodlf.p1=#1EA6EB
-nimrodlf.p2=#28B0F5
-nimrodlf.p3=#32BAFF
-nimrodlf.s1=#BCBCBE
-nimrodlf.s2=#C6C6C8
-nimrodlf.s3=#D0D0D2
-nimrodlf.w=#FFFFFF
-nimrodlf.b=#000000
-nimrodlf.menuOpacity=255
-nimrodlf.frameOpacity=255
+#Mon Nov 03 22:36:33 CST 2025
+nimrodlf.w=\#FFFFFF
 nimrodlf.font=SansSerif-PLAIN-12
+nimrodlf.menuOpacity=255
+nimrodlf.s3=\#D0D0D2
+nimrodlf.s2=\#C6C6C8
+nimrodlf.p3=\#32BAFF
+nimrodlf.s1=\#BCBCBE
+nimrodlf.p2=\#28B0F5
+nimrodlf.p1=\#1EA6EB
+nimrodlf.frameOpacity=255
+nimrodlf.b=\#000000
