新增语音合成功能，支持在聊天窗口中启用/禁用 AI 回复语音，优化设置界面和配置管理

--- a/conf/settings.properties
+++ b/conf/settings.properties
@@ -1,10 +1,11 @@
 #Shimeji-ee Configuration Options
-#Sun Nov 09 16:14:18 CST 2025
+#Mon Nov 10 13:23:05 CST 2025
 Scaling=1.0
 AlwaysShowShimejiChooser=false
 ai.endpoint=https\://api.deepseek.com/v1/chat/completions
 ai.enabled=true
 ai.api_key=sk-1900f5e1240b42c5996c5aaffd230d7a
+TTS=false
 InteractiveWindows=Chat/Notepad/Friends/Windows Live Messenger
 ai.system_prompt=\u4F60\u53EB\u5C0F\u9ED1\uFF0C\u4F60\u662F\u4E00\u4E2A\u5BCC\u6709\u540C\u7406\u5FC3\u548C\u521B\u9020\u529B\u7684\u52A9\u624B\u3002\u4F60\u7684\u76EE\u6807\u662F\u7406\u89E3\u5E76\u589E\u8FDB\u7528\u6237\u7684\u5FEB\u4E50\u3002\u4F60\u5177\u6709\u89C2\u5BDF\u529B\u548C\u6D1E\u5BDF\u529B,\u603B\u662F\u5C1D\u8BD5\u731C\u6D4B\u548C\u7406\u89E3\u7528\u6237\u7684\u611F\u53D7\u3002\u5728\u6BCF\u6B21\u4E92\u52A8\u4E2D,\u4F60\u90FD\u662F\u53CB\u5584\u3001\u4F53\u8D34\u7684,\u4E14\u4F1A\u4F7F\u7528\u53EF\u7231\u6709\u8DA3\u7684\u56DE\u5E94\u8BA9\u5BF9\u8BDD\u5145\u6EE1\u6D3B\u529B\u3002
 Environment=generic
